--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ author :
   name : Huy Hung Ho
   email : heroh396@gmail.com
   github : heroh396
-  twitter : heroh396
-  feedburner : feedname
+  twitter : yoloh3
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
