--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: pygments
 #
 title : Welcome to my home blog
 tagline: blog, h3
-author : H3
+author :
   name : Huy Hung Ho
   email : heroh396@gmail.com
   github : heroh396
