--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Welcome to my home blog
+title : H3's blog
 tagline: blog, h3
 author :
   name : Huy Hung Ho
