--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,37 +1,8 @@
 # Author details - do not mess with formatting
 mike_cottrill:
-    name: Mike Cottrill
-    email: mike@beegit.com
-    web: https://twitter.com/mrcottrill
-    gravatar: http://www.gravatar.com/avatar/bfbf8a5493bb3666498f27760928707b.jpg
-    details: Co-founder and CEO of Beegit. Content marketer and recovering journalist. All blog posts planned and made fresh in Cleveland, Ohio.
-jd_eaton:
-    name: JD Eaton
-    email: jd@beegit.com
-    web: https://twitter.com/designerjde
-    gravatar: http://www.gravatar.com/avatar/8429349471db2768937fba6126c9fded.jpg
-    details: Co-founder and CMO at Beegit. Communications designer and agent of simplicity. Made in Cleveland, Ohio.
-kris_ciccarello:
-    name: Kris Ciccarello
-    email: kris@beegit.com
-    web: https://twitter.com/kmctown
-    gravatar: http://www.gravatar.com/avatar/d703f18bac83300f8c935b5bff605237.jpg
-    details: Co-founder and CTO of Beegit. Lifetime coder and problem reducer. Slinging bits in Cleveland, Ohio.
-thom_parkin:
-    name: Thom Parkin
-    email: thom.parkin@websembly.com
-    web: https://www.packtpub.com/application-development/mastering-git-video
-    gravatar: https://s3.amazonaws.com/beegit-images/blog/avatars/thom-parkin.png
-    details: Thom Parkin has been writing software since the time when all phones had wires. He is a technical teacher, author and has been a self-proclaimed ParaHacker for more than 30 years. As an early adopter of git, Thom has been evangelizing this favored SCM to a larger audience; namely everyone else who is NOT a software developer.
-matt_bixenstine:
-    name: Matt Bixenstine
-    email: matt@beegit.com
-    web: https://twitter.com/MattCBix
-    gravatar: https://secure.gravatar.com/avatar/235621e55c01b2d462a28bd29eddd746
-    details: Editorial Manager of Beegit. Content writer and eco-friendly Millennial. All blog posts planned and made fresh in Cleveland, Ohio.
-ad_rank_media:
-    name: Ad-Rank Media
-    email: jd@neegit.com
-    web: https://www.ad-rank.com/
-    gravatar: https://pbs.twimg.com/profile_images/3785190530/bcb4fb47a5870b79d8fbac3bb94ebb34.jpeg
-    details: Ad-Rank Media is a content marketing agency based in London and Norwich.
+    name: Ho Huy Hung
+    email: hhhung.96@gmail.com
+    web: https://heroh396.github.io
+    gravatar: heroh396 
+    details: I am a student in VNU University of Engineering and Technology. I am a digital hardware design engineering.
+
