--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 # Author details - do not mess with formatting
-h3:
+heroh396:
     name: Ho Huy Hung
     email: hhhung.96@gmail.com
     web: https://heroh396.github.io
