--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 heroh396:
     name: Ho Huy Hung
     email: hhhung.96@gmail.com
-    web: https://heroh396.github.io
+    web: https://www.linkedin.com/in/huy-hung-ho-6a320411a/
     gravatar: https://gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png
     details: I am a student in VNU University of Engineering and Technology. I am a digital hardware design engineering.
 
