--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,5 +4,5 @@ heroh396:
     email: hhhung.96@gmail.com
     web: https://www.linkedin.com/in/huy-hung-ho-6a320411a/
     gravatar: https://gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png
-    details: I am a student in VNU University of Engineering and Technology. I am a digital hardware design engineering.
+    details: I am a student in VNU University of Engineering and Technology. I am a digital hardware design engineer.
 
