--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 heroh396:
     name: Ho Huy Hung
     email: hhhung.96@gmail.com
-    web: https://www.linkedin.com/in/huy-hung-ho-6a320411a/
-    gravatar: https://gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png
-    details: I am the fourth year student in VNU University of Engineering and Technology. I am working in Laboratory on Smart Integrated Systems (SISLAB).
+    web: https://www.linkedin.com/in/yoloh3
+    gravatar: https://yoloh3.github.io/imgs/avt.jpg
+    details: An hardware design engineer, I, have the experiment about hardware implementation images processing and neural network.
 
