--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: "Welcome to the blog"
-email: "hhhung96@gmail.com"
-description: "This blog propose useful post from my knowledge."
+title: "All the best experiences in my world! - Yoloh3"
+email: "heroh396@gmail.com"
+description: "I always want to share my feelling, my experience, my life. Above all, I want to make friends with everyone in the world."
 baseurl: ""
 url: "https://yoloh3.github.io"
 
