--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: "heroh396@gmail.com"
 description: "I always want to share my feelling, my experience, my life. Above all, I want to make friends with everyone in the world."
 baseurl: ""
 url: "https://yoloh3.github.io"
+future: true
 plugins:
   - jekyll-sitemap
 
