--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,4 +4,4 @@ heroh396:
     email: hhhung.96@gmail.com
     web: https://www.linkedin.com/in/yoloh3
     gravatar: https://yoloh3.github.io/imgs/avt.jpg
-    details: An hardware design engineer, I have the experience about hardware design in images processing and neural network.
+    details: An semiconductor engineer from Vietnam
