Updated layout for google search console

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,6 @@ permalink: pretty
 gems:
  - jekyll-redirect-from
  - jekyll-redirect-to
+
+ webmaster_verifications:
+   google: google-site-verification=gWkyCtg36HZ6Y6-vNJWaJyDtvs58qhKSehw00EEyT4o
