Updated layout for google search console

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ url: "https://yoloh3.github.io"
 future: true
 plugins:
   - jekyll-sitemap
+  - jekyll-seo-tag
+ 
 
 # Build settings
 markdown: kramdown
