Updated directory arch and images

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,5 +3,5 @@ heroh396:
     name: Ho Huy Hung
     email: hhhung.96@gmail.com
     web: https://www.linkedin.com/in/yoloh3
-    gravatar: https://yoloh3.github.io/imgs/avt.jpg
+    gravatar: https://yoloh3.github.io/imgs/logo/avt.jpg
     details: An semiconductor engineer from Vietnam
