--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "All the best experiences in my world! - Yoloh3"
 email: "heroh396@gmail.com"
 description: "I always want to share my feelling, my experience, my life. Above all, I want to make friends with everyone in the world."
 baseurl: ""
-url: "https://yoloh3.github.io"
+url: "https://yoloh3.com"
 future: true
 plugins:
   - jekyll-sitemap
