Log: update blog structure

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Author details - do not mess with formatting
 heroh396:
     name: Ho Huy Hung
-    email: hhhung.96@gmail.com
+    email: heroh396@gmail.com
     web: https://www.linkedin.com/in/yoloh3
     gravatar: https://yoloh3.github.io/imgs/logo/avt.jpg
     details: An semiconductor engineer from Vietnam
